# devops-engineer-from-scratch-project-313

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  links_repository.py  main.py  models.py  nginx.conf  package-lock.json  package.json  pyproject.toml  repositories.py  ruff.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_links.py  test_ping.py
